# iot

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
WiFiSMS/: WiFiSMS.ino
main/: main.ino
main/all_in_sim/: about_machine.h  about_sim.h  about_wifi.h
msgq/: msgq.ino
produce_msq_upstash/: produce_msq_upstash.ino
receive_msq_ustash/: receive_msq_ustash.ino
src/: main.ino
src/all_in_sim/: about_machine.h  about_message_queue.h  about_sim.h  all_in_sim.ino
src/allinone_msq_upstash/: about_led.h  about_mq.h  about_sim.h  about_wifi.h  allinone_msq_upstash.ino
src/produce_msq_upstash/: produce_msq_upstash.ino  utilities.h
src/receive_msq_ustash/: receive_msq_ustash.ino  utilities.h
